--- a/views/index.hbs
+++ b/views/index.hbs
@@ -126,19 +126,23 @@
       </div>
     </div>
 {{!-- juguete 4 --}}
-    <div class="card" style="width: 18rem;">
-      <img src="/images/juguetegato4.jpeg" class="card-img-top" alt="...">
+ <div class="card" style="width: 18rem;">
+      <img src="/images/juguete5.1.jpg" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Petlinks Sweet Tweet</h5>
-        <p class="card-text"> Singing Bird for Hunting</p>
+        <h5 class="card-title">Eoadstool Scratch Post for Cats </h5>
+        <p class="card-text">The EveryYay Toadstool Scratch Post provides a funky retro touch to your kitty's decor. Help your kitty satisfy their urge to claw with this uniquely shaped scratcher!
+
+- Toadstool Scratch Post from EveryYay
+- Sisal top and post for scratching
+- Comes with two replaceable toys
+- Helps satisfy the urge to claw</p>
         <p>$200</p>
         <a href="#" class="btn btn-dark">Add to cart</a>
       </div>
     </div>
   </div>
-
    {{!-- Seccion 2 tarjetas --}}
-   <img alt="dogToys" class="img-banner" style="width: 100vw; height: 47vh; display: block;" src="/images/banner2.jpg">
+   <img alt="dogToys" class="img-banner" style="width: 100vw; height: 47vh; display: block;" src="/images/banner2.png">
     <div class="titlesIndex">
 
     <h3>Dog Toys</h3>
