Ajustes con botones para que solo se muestren en rol admin

--- a/public/stylesheets/profile.css
+++ b/public/stylesheets/profile.css
@@ -14,8 +14,12 @@
     padding-top: 20px;
     position: absolute;
     width: 250px;
+    
 }
 
+.btnEditProfile{
+    text-decoration: none;
+}
 /* MainProfile */
 
 .profile {
