--- a/views/products/newProduct.hbs
+++ b/views/products/newProduct.hbs
@@ -100,7 +100,7 @@
               <p class="card-text"><strong>Quantity: </strong> <input type="number" name="quantity" min="1" ></p>
               <div class="d-flex justify-content-between align-items-center">
                 <div  class="d-grid gap-2 col-6 mx-auto">
-                  <button type="submit" class="btn btn-sm btn-outline-secondary">Add Product</button>
+                  <button type="submit" class="btn btn-sm btn-outline-secondary">Create Product</button>
                 </div>
               </div>
             </div>
