--- a/views/products/dogs.hbs
+++ b/views/products/dogs.hbs
@@ -63,8 +63,18 @@
   <body>
     {{!-- Navegacion --}}
     <nav class="navegacion-principal"> 
-              {{!-- Boton Logout --}}
-              {{#unless userInSession}}
+               {{!-- Boton Logout --}}
+              {{#if userInSession}}
+              <a href="/auth/logout">
+                <button class="btn btn-primary logout"style="background-color: rgb(69,179,252);
+                background: linear-gradient(90deg, rgba(69,179,252,1) 5%, rgba(212,29,253,0.4601739621629902) 51%, rgba(69,179,252,0.35933362602853647) 93%); border: none;"> 
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;"><path d="m2 12 5 4v-3h9v-2H7V8z"></path><path d="M13.001 2.999a8.938 8.938 0 0 0-6.364 2.637L8.051 7.05c1.322-1.322 3.08-2.051 4.95-2.051s3.628.729 4.95 2.051 2.051 3.08 2.051 4.95-.729 3.628-2.051 4.95-3.08 2.051-4.95 2.051-3.628-.729-4.95-2.051l-1.414 1.414c1.699 1.7 3.959 2.637 6.364 2.637s4.665-.937 6.364-2.637c1.7-1.699 2.637-3.959 2.637-6.364s-.937-4.665-2.637-6.364a8.938 8.938 0 0 0-6.364-2.637z"></path></svg>
+                  Logout
+                </button>
+              </a>
+              {{/if}}
+              {{!-- Boton Login --}}
+              {{#if userInSession}}
               <a href="/auth/login">
                 <button class="btn btn-primary login" style="background-color: rgb(69,179,252);
                 background: linear-gradient(90deg, rgba(69,179,252,1) 5%, rgba(212,29,253,0.4601739621629902) 51%, rgba(69,179,252,0.35933362602853647) 93%);border: none;"> 
@@ -72,7 +82,7 @@
                   Login
                 </button>
               </a>
-              {{/unless}}
+              {{/if}}
                         <a href="/products/cats">
                 <button class="btn btn-primary cats"style="background-color:  rgb(69,179,252);
                 background: linear-gradient(90deg, rgba(69,179,252,1) 5%, rgba(212,29,253,0.4601739621629902) 51%, rgba(69,179,252,0.35933362602853647) 93%);border: none;"> 
